--- a/chatgpt_app/pubspec.yaml
+++ b/chatgpt_app/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   card_swiper: ^3.0.1
   loading_animation_widget: ^1.2.0+4
   curved_navigation_bar: ^1.0.3
-
+  smooth_page_indicator: ^1.1.0
+  animated_text_kit: ^4.2.2
+  
   # State Management
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
@@ -34,4 +36,6 @@ flutter:
   uses-material-design: true
   assets:
     - .env
-  #   - images/a_dot_ham.jpeg
+    - images/lottie/1.json
+    - images/lottie/2.json
+    - images/logo.png
